--- a/BHH Frontend/src/styles/index.css
+++ b/BHH Frontend/src/styles/index.css
@@ -189,7 +189,8 @@
   font-weight: 700;
   font-style: normal;
 }
-.login a {
+.login a,
+.register-container a {
   background-color: #f2ff00;
   border-radius: 30px;
   cursor: pointer;
@@ -204,7 +205,8 @@
   text-shadow: #000 1px 1px 5px;
   transition: all 0.3s ease-in;
 }
-.login a:hover {
+.login a:hover,
+.register-container > a:hover {
   background-color: red;
   box-shadow: rgb(255, 0, 0) 0px 0px 10px;
   color: #000;
@@ -341,4 +343,55 @@
 .input-container {
   position: relative;
   top: 10px;
+}
+
+/*   Register FOrm */
+
+.register-container {
+  background-image: url("");
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 500px;
+  justify-content: flex-end;
+  text-align: center;
+  font-family: "Creepster", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+}
+.register-container > h1 {
+  font-size: 70px;
+  color: #fff;
+  text-shadow: rgba(255, 255, 0, 1) 0px 0px 20px;
+  display: inline-block;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
+.register-input {
+  margin: 20px 0;
+  text-align: center;
+  font-size: 20px;
+  width: 300px;
+  font-family: "Kalam", cursive;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.register-container > a {
+  background-color: #f2ff00;
+  border-radius: 30px;
+  cursor: pointer;
+  padding: 5px 20px;
+  text-align: center;
+  position: relative;
+  top: 10px;
+  font-size: 30px;
+  text-decoration: none;
+  color: #fff;
+  box-shadow: rgb(238, 255, 0) 0px 0px 10px;
+  text-shadow: #000 1px 1px 5px;
+  transition: all 0.3s ease-in;
 }
