Refactoring the styles folder structure

--- a/BHH Frontend/src/styles/index.css
+++ b/BHH Frontend/src/styles/index.css
@@ -2,6 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+
+@import url("./reset.css");
+@import url("./login.css");
+@import url("./chat.css");
+@import url("./register.css");
+@import url("./keyframes.css");
+@import url("./explorerSelect.css");
+
 .centered-container {
   position: absolute;
   top: 50%;
@@ -33,102 +41,6 @@
 .main h1 span.span {
   animation: letter-flicker 2s linear infinite;
 }
-@keyframes text-flicker {
-  0% {
-    opacity: 0.1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-
-  2% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  8% {
-    opacity: 0.1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  9% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  12% {
-    opacity: 0.1;
-    text-shadow: 0px 0px rgba(242, 22, 22, 1);
-  }
-  20% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  25% {
-    opacity: 0.3;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  30% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-
-  70% {
-    opacity: 0.7;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-
-  72% {
-    opacity: 0.2;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-
-  77% {
-    opacity: 0.9;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  100% {
-    opacity: 0.9;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-}
-
-@keyframes letter-flicker {
-  0% {
-    opacity: 0.1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  2% {
-    opacity: 0.1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  4% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-
-  19% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  21% {
-    opacity: 0.1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  23% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-
-  80% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  83% {
-    opacity: 0.4;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-  87% {
-    opacity: 1;
-    text-shadow: 0px 0px 29px rgba(242, 22, 22, 1);
-  }
-}
-
 #myVideo {
   position: fixed;
   right: 0;
@@ -138,194 +50,6 @@
   z-index: -1;
   filter: blur(8px);
 }
-.header {
-  font-family: "Creepster", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  text-align: center;
-}
-
-.header h3 {
-  font-size: 70px;
-  color: #fff;
-  text-shadow: rgba(255, 255, 0, 1) 0px 0px 20px;
-  display: inline-block;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-}
-.header i.fa-solid.fa-ghost {
-  color: #fff;
-  text-shadow: rgba(255, 255, 0, 1) 0px 0px 20px;
-}
-.left-icon,
-.right-icon {
-  margin: -10px 30px;
-  position: relative;
-  font-size: 40px;
-  opacity: 0.3;
-  transition: 0.5s ease-out;
-} /*  Borko debel si, 1 chas te nqma  */
-.left-icon:hover,
-.right-icon:hover {
-  opacity: 1;
-  transform: scale(1.1);
-}
-.login {
-  text-align: center;
-  font-family: "Creepster", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  text-align: center;
-}
-.login input {
-  text-align: center;
-  font-size: 30px;
-  width: 300px;
-  position: relative;
-  top: 25px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: "Kalam", cursive;
-  font-weight: 700;
-  font-style: normal;
-}
-.login a,
-.register-container a {
-  background-color: #f2ff00;
-  border-radius: 30px;
-  cursor: pointer;
-  padding: 5px 20px;
-  text-align: center;
-  position: relative;
-  top: 10px;
-  font-size: 30px;
-  text-decoration: none;
-  color: #fff;
-  box-shadow: rgb(238, 255, 0) 0px 0px 10px;
-  text-shadow: #000 1px 1px 5px;
-  transition: all 0.3s ease-in;
-}
-.login a:hover,
-.register-container > a:hover {
-  background-color: red;
-  box-shadow: rgb(255, 0, 0) 0px 0px 10px;
-  color: #000;
-  text-shadow: #fff 1px 1px 4px;
-}
-/* 
- ChatComponent CSS 
- */
-.big-container .left-component h2 span.loggedText {
-  font-family: "Kalam", cursive;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 40px;
-  color: #fff;
-}
-.big-container .left-component h2 span.username {
-  font-size: 40px;
-  color: #fff;
-  text-shadow: rgb(255, 0, 0) 0px 0px 10px;
-}
-.big-container .left-component h2 span.loggedText,
-.big-container .left-component h2 span.username {
-  position: relative;
-  left: 40px;
-  top: 10px;
-}
-.big-container h1.textHeader {
-  font-family: "Creepster", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  text-align: center;
-  font-size: 50px;
-  color: #fff;
-  text-shadow: rgba(255, 255, 0, 1) 0px 0px 10px;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: black;
-
-  position: absolute;
-  left: 50%;
-  text-transform: uppercase;
-  transform: translate(-50%, 20%);
-
-  animation: gameLobby-flicker 3s linear infinite;
-}
-
-@keyframes gameLobby-flicker {
-  0% {
-    text-shadow: rgba(255, 255, 0, 0.1) 0px 0px 15px;
-  }
-  2% {
-    text-shadow: rgba(255, 255, 0, 0.1) 0px 0px 15px;
-  }
-  4% {
-    text-shadow: rgba(255, 255, 0, 1) 0px 0px 15px;
-  }
-
-  19% {
-    text-shadow: rgba(255, 255, 0, 1) 0px 0px 15px;
-  }
-  21% {
-    text-shadow: rgba(255, 255, 0, 0.1) 0px 0px 15px;
-  }
-  23% {
-    text-shadow: rgba(255, 255, 0, 1) 0px 0px 15px;
-  }
-
-  80% {
-    text-shadow: rgba(255, 255, 0, 1) 0px 0px 15px;
-  }
-  83% {
-    text-shadow: rgba(255, 255, 0, 0.4) 0px 0px 15px;
-  }
-  87% {
-    text-shadow: rgba(255, 255, 0, 1) 0px 0px 15px;
-  }
-}
-
-.chat-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-#messages {
-  width: 940px;
-  height: 500px; /* Set your desired maximum height for the visible part of the chatbox */
-  padding: 10px;
-  overflow: hidden; /* Hide overflowing content */
-  margin: 0 auto;
-  background-image: url("../assets/saigo_no_tikvo.jpg") !important;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 5px;
-  position: relative;
-  box-shadow: 0px 0px 3px 4px rgba(255, 117, 24, 0.75);
-}
-
-#messagesContent {
-  overflow-y: auto;
-  max-height: 100%;
-  position: absolute;
-  width: 100%;
-  top: 10px;
-  left: 5px;
-  bottom: 20px;
-}
-
-.message {
-  word-wrap: break-word;
-  padding: 5px;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 6px 2px rgba(0, 0, 0, 1);
-  margin-bottom: 10px;
-  max-width: 880px;
-  color: #fff;
-  border-radius: 5px;
-}
-
 .latin-text {
   font-family: "Kalam", cursive;
   font-weight: 700;
@@ -343,55 +67,4 @@
 .input-container {
   position: relative;
   top: 10px;
-}
-
-/*   Register FOrm */
-
-.register-container {
-  background-image: url("");
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  height: 500px;
-  justify-content: flex-end;
-  text-align: center;
-  font-family: "Creepster", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  text-align: center;
-}
-.register-container > h1 {
-  font-size: 70px;
-  color: #fff;
-  text-shadow: rgba(255, 255, 0, 1) 0px 0px 20px;
-  display: inline-block;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-}
-
-.register-input {
-  margin: 20px 0;
-  text-align: center;
-  font-size: 20px;
-  width: 300px;
-  font-family: "Kalam", cursive;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.register-container > a {
-  background-color: #f2ff00;
-  border-radius: 30px;
-  cursor: pointer;
-  padding: 5px 20px;
-  text-align: center;
-  position: relative;
-  top: 10px;
-  font-size: 30px;
-  text-decoration: none;
-  color: #fff;
-  box-shadow: rgb(238, 255, 0) 0px 0px 10px;
-  text-shadow: #000 1px 1px 5px;
-  transition: all 0.3s ease-in;
 }
