--- a/BHH Frontend/src/styles/login.css
+++ b/BHH Frontend/src/styles/login.css
@@ -1,18 +1,11 @@
-.register-container {
-  background-image: url("");
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  height: 500px;
-  justify-content: flex-end;
-  text-align: center;
+.header {
   font-family: "Creepster", system-ui;
   font-weight: 400;
   font-style: normal;
   text-align: center;
 }
-h1 {
+
+.header h3 {
   font-size: 70px;
   color: #fff;
   text-shadow: rgba(255, 255, 0, 1) 0px 0px 20px;
@@ -20,18 +13,43 @@ h1 {
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
-
-.register-input {
-  margin: 20px 0;
+.header i.fa-solid.fa-ghost {
+  color: #fff;
+  text-shadow: rgba(255, 255, 0, 1) 0px 0px 20px;
+}
+.left-icon,
+.right-icon {
+  margin: -10px 30px;
+  position: relative;
+  font-size: 40px;
+  opacity: 0.3;
+  transition: 0.5s ease-out;
+} /*  Borko debel si, 1 chas te nqma  */
+.left-icon:hover,
+.right-icon:hover {
+  opacity: 1;
+  transform: scale(1.1);
+}
+.login {
   text-align: center;
-  font-size: 20px;
+  font-family: "Creepster", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+}
+.login input {
+  text-align: center;
+  font-size: 30px;
   width: 300px;
+  position: relative;
+  top: 25px;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "Kalam", cursive;
   font-weight: 700;
   font-style: normal;
 }
-
-.register-container > a {
+.login a {
   background-color: #f2ff00;
   border-radius: 30px;
   cursor: pointer;
@@ -46,7 +64,7 @@ h1 {
   text-shadow: #000 1px 1px 5px;
   transition: all 0.3s ease-in;
 }
-.register-container > a:hover {
+.login a:hover {
   background-color: red;
   box-shadow: rgb(255, 0, 0) 0px 0px 10px;
   color: #000;
