--- a/BHH Frontend/src/styles/explorerSelect.css
+++ b/BHH Frontend/src/styles/explorerSelect.css
@@ -9,6 +9,10 @@
   flex-direction: row;
 }
 
+.color-name-heading {
+  font-family: "Creepster", system-ui;
+}
+
 .mini-btn-container {
   display: flex;
   align-items: center;
@@ -16,7 +20,7 @@
   flex-direction: column;
   width: 25%;
   height: 100%;
-  background-color: green;
+  background-color: lightgreen;
 }
 .explorer-pair-container {
   display: inline-flex;
@@ -27,22 +31,88 @@
 
 .explorer-card {
   background: none;
-  border: 0px black solid;
   width: 100px;
   margin: 0 4px;
   display: inline-block;
 }
 
-.explorer-preview {
-  width: 80%;
+.explorer-preview-container {
+  width: 50%;
   height: 100%;
   background-color: yellow;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  flex-wrap: wrap;
+}
+.explorer-preview-container img {
+  margin-top: 5%;
+  margin-left: 2.5%;
+  width: 95%;
+  height: 65%;
+}
+.explorer-stat-container {
+  width: 100%;
+  height: 31.69%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
+.explorer-stat-container span {
+  font-family: "Creepster", system-ui;
+  font-size: 24px;
+}
+
+.chosen-character-container button {
+  height: 50px;
+  width: 100px;
+  margin-right: 5%;
+  font-family: "Creepster", system-ui;
+  font-weight: 400;
+  font-size: 25px;
+  background-color: lightyellow;
+  border-radius: 50%;
+  justify-self: flex-end;
+}
+
+.chosen-character-container button:hover {
+  margin-right: 5%;
+  font-family: "Creepster", system-ui;
+  font-weight: 400;
+  font-size: 25px;
+  background-color: lightblue;
+}
+
+.chosen-character-container {
+  width: 30%;
+  height: 100%;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chosen-character-container h3 {
+  margin: 10% 0 10% 0;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.player-choice-container {
+  font-family: "Creepster", system-ui;
+  width: 100%;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.player-choice-container h1 {
+  font-size: 20px;
+  font-weight: bold;
+}
+/*
 /*
 
   display: grid;
